2014-02-15  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/60183
	* tree-ssa-phiprop.c (propagate_with_phi): Avoid speculating
	loads.
	(tree_ssa_phiprop): Calculate and free post-dominators.

2014-02-14  Jeff Law  <law@redhat.com>

	PR rtl-optimization/60131
	* ree.c (get_extended_src_reg): New function.
	(combine_reaching_defs): Use it rather than assuming location
	of REG.
	(find_and_remove_re): Verify first operand of extension is
	a REG before adding the insns to the copy list.

2014-02-14  Roland McGrath  <mcgrathr@google.com>

	* configure.ac (HAVE_AS_IX86_UD2): New test for 'ud2' mnemonic.
	* configure: Regenerated.
	* config.in: Regenerated.
	* config/i386/i386.md (trap) [HAVE_AS_IX86_UD2]: Use the mnemonic
	instead of ASM_SHORT.

2014-02-14  Vladimir Makarov  <vmakarov@redhat.com>
	    Richard Earnshaw  <rearnsha@arm.com>

	PR rtl-optimization/59535
	* lra-constraints.c (process_alt_operands): Encourage alternative
	when unassigned pseudo class is superset of the alternative class.
	(inherit_reload_reg): Don't inherit when optimizing for code size.
	* config/arm/arm.h (MODE_BASE_REG_CLASS): Add version for LRA
	returning CORE_REGS for anything but Thumb1 and BASE_REGS for
	modes not less than 4 for Thumb1.

2014-02-14  Kyle McMartin  <kyle@redhat.com>

	PR pch/60010
	* config/host-linux.c (TRY_EMPTY_VM_SPACE): Define for AArch64.

2014-02-14  Richard Biener  <rguenther@suse.de>

	* cilk-common.c (cilk_arrow): Build a MEM_REF, not an INDIRECT_REF.
	(get_frame_arg): Drop the assert with langhook types_compatible_p.
	Do not strip INDIRECT_REFs.

2014-02-14  Richard Biener  <rguenther@suse.de>

	PR lto/60179
	* lto-streamer-out.c (DFS_write_tree_body): Do not follow
	DECL_FUNCTION_SPECIFIC_TARGET.
	(hash_tree): Do not hash DECL_FUNCTION_SPECIFIC_TARGET.
	* tree-streamer-out.c (pack_ts_target_option): Remove.
	(streamer_pack_tree_bitfields): Do not stream
	TS_TARGET_OPTION.
	(write_ts_function_decl_tree_pointers): Do not stream